[gd_scene load_steps=4 format=3 uid="uid://050lspxqr85s"]

[ext_resource type="Script" path="res://Scripts/inventory.gd" id="1_lah5x"]
[ext_resource type="Texture2D" uid="uid://6ydnmn3s5ddn" path="res://Visual Resources/AsukaGaming.jpg" id="2_41vv6"]
[ext_resource type="Texture2D" uid="uid://bhqleetq7vvhn" path="res://Visual Resources/evangelion-ha-cambiado-version-netflix-1024x548-4204003973.jpg" id="3_efxar"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lah5x")

[node name="ItemInventory" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 369.0
offset_bottom = 258.0
color = Color(0.197937, 0.197937, 0.197937, 1)

[node name="MarginContainer" type="MarginContainer" parent="ItemInventory"]
layout_mode = 1
offset_right = 368.0
offset_bottom = 247.0

[node name="VBoxContainer" type="VBoxContainer" parent="ItemInventory/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="ItemInventory/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="ButtonSpawn" type="Button" parent="ItemInventory/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "SpawnItemDebug"

[node name="ScrollContainer" type="ScrollContainer" parent="ItemInventory/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="ItemInventory/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/h_separation = 0
columns = 8

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -355.0
offset_bottom = 404.0
grow_horizontal = 0
color = Color(0.188235, 0.188235, 0.188235, 0.435294)

[node name="Head" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.5
offset_right = 60.5
offset_bottom = 78.0
grow_horizontal = 2
texture = ExtResource("2_41vv6")
expand_mode = 1

[node name="HeadSprite" type="TextureRect" parent="ColorRect/Head"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftArm" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -124.0
offset_right = 121.0
offset_bottom = -46.0
grow_vertical = 2
texture = ExtResource("3_efxar")
expand_mode = 1

[node name="LeftArmSprite" type="TextureRect" parent="ColorRect/LeftArm"]
layout_mode = 0
offset_right = 123.0
offset_bottom = 79.0

[node name="RightArm" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 234.0
offset_top = -124.0
offset_right = 355.0
offset_bottom = -46.0
grow_vertical = 2
texture = ExtResource("3_efxar")
expand_mode = 1

[node name="RightArmSprite" type="TextureRect" parent="ColorRect/RightArm"]
layout_mode = 0
offset_top = 1.0
offset_right = 121.0
offset_bottom = 78.0

[node name="Chest" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 115.0
offset_top = -44.0
offset_right = 236.0
offset_bottom = 34.0
grow_vertical = 2
texture = ExtResource("3_efxar")
expand_mode = 1

[node name="ChestSprite" type="TextureRect" parent="ColorRect/Chest"]
layout_mode = 0
offset_left = -1.0
offset_right = 122.0
offset_bottom = 78.0

[node name="LeftLeg" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 36.0
offset_right = 121.0
offset_bottom = 114.0
grow_vertical = 2
texture = ExtResource("3_efxar")
expand_mode = 1

[node name="LeftLegSprite" type="TextureRect" parent="ColorRect/LeftLeg"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 78.0

[node name="RightLeg" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 234.0
offset_top = 35.0
offset_right = 355.0
offset_bottom = 113.0
grow_vertical = 2
texture = ExtResource("3_efxar")
expand_mode = 1

[node name="RightLegSprite" type="TextureRect" parent="ColorRect/RightLeg"]
layout_mode = 0
offset_right = 121.0
offset_bottom = 78.0

[connection signal="pressed" from="ItemInventory/MarginContainer/VBoxContainer/Header/ButtonSpawn" to="." method="_on_button_spawn_pressed"]
